--- a/resources/cssLess/_variables.less
+++ b/resources/cssLess/_variables.less
@@ -1,9 +1,14 @@
 @resourcePath: "../";
-@color-normal: #1a1a1a;
-@color-purple: #660066;
-@color-green: #006600;
-@color-brown: #663300;
-@color-blue: #004466;
-@color-red: #660000;
-@color-silver: #666666;
-@color-gold: #666600;
+@brand-primary: darken(#428BCA, 6.5%); // #337ab7
+@brand-success: #5CB85C;
+@brand-info: #5BC0DE;
+@brand-warning: #F0AD4E;
+@brand-danger: #D9534F;
+@color-normal: #1A1A1A;
+@color-purple: #606;
+@color-green: #060;
+@color-brown: #630;
+@color-blue: #046;
+@color-red: #600;
+@color-silver: #666;
+@color-gold: #660;
