--- a/resources/cssLess/styles.less
+++ b/resources/cssLess/styles.less
@@ -8,9 +8,12 @@ body {
 }
 
 main {
-	margin-top: 60px;
+	margin-top: 84px;
 }
-
+.navbar-fixed-top{
+	border: 0;
+	box-shadow: 0 0 5px 5px #111;
+}
 .navbar-form-no-border {
 	border: none;
 	margin-top: 0;
@@ -81,6 +84,9 @@ option {
 	display: inline-block;
 	margin-bottom: 3px;
 	vertical-align: top;
+	.nav & {
+		margin-bottom: 0;
+	}
 	&.indent {
 		margin-left: 30px;
 	}
@@ -135,9 +141,19 @@ option {
 			font-size: 75%;
 			padding-bottom: 3px;
 			border-color: @inputBox-frontcolor-default !important;
-
 		}
 		:nth-child(2) { border-left-width: 1px; }
+		.nav & {
+			padding-top: 0;
+			> header {
+				position: initial;
+				top: initial;
+				z-index: initial;
+				font-size: 100%;
+				padding-bottom: initial;
+			}
+			:nth-child(2) { border-left-width: 0px; }
+		}
 		&.hasTypeIcon {
 			:nth-child(2), :nth-child(3) { border-left-width: 0px; }
 		}
