--- a/resources/cssLess/_variables-light.less
+++ b/resources/cssLess/_variables-light.less
@@ -1,8 +1,8 @@
 @import "../vendor/bootstrap-3.3.7/less/_variables";
 
-@body-bg: #111;
-@body-color: #FFF;
-@body-color-inverted: #000;
+@body-bg: #EEE;
+@body-color: #000;
+@body-color-inverted: #FFF;
 
 @resourcePath: "../";
 @brand-primary: darken(#428BCA, 6.5%); // #337ab7
@@ -10,21 +10,21 @@
 @brand-info: #5BC0DE;
 @brand-warning: #F0AD4E;
 @brand-danger: #D9534F;
-@color-normal: #1A1A1A;
-@color-purple: #606;
-@color-green: #060;
-@color-brown: #630;
-@color-blue: #046;
-@color-red: #600;
-@color-silver: #666;
-@color-gold: #660;
+@color-normal: #CCC;
+@color-purple: #909;
+@color-green: #090;
+@color-brown: #960;
+@color-blue: #069;
+@color-red: #900;
+@color-silver: #999;
+@color-gold: #990;
 
 @color-stars: #FF0;
 @color-kill: #F00;
 @color-stealth: #0F0;
 @color-protect: #0FF;
 
-@color-media-default: #222;
+@color-media-default: #CCC;
 @color-media-new: #0A0;
 @color-media-clone: #0AA;
 @color-media-show: @color-media-default;
@@ -32,20 +32,20 @@
 @color-media-duplicate-found: #00A;
 @color-media-has-missing-data: #A00;
 
-@inputBox-backcolor-default: #000;
+@inputBox-backcolor-default: #FFF;
 @inputBox-backcolor-header: @inputBox-backcolor-default;
-@inputBox-backcolor-readonly: #0D0D0D;
-@inputBox-backcolor-editable: #262626;
-@inputBox-backcolor-editable-alt: #404040;
+@inputBox-backcolor-readonly: #F2F2F2;
+@inputBox-backcolor-editable: #D9D9D9;
+@inputBox-backcolor-editable-alt: #BFBFBF;
 @inputBox-frontcolor-default: @body-color;
 
 //=== Custom navbar
 @navbar-custom-color: lighten(@gray-light, 15%);
-@navbar-custom-bg: #222;
+@navbar-custom-bg: #DDD;
 @navbar-custom-border: darken(@navbar-custom-bg, 10%);
 
 @navbar-custom-link-color: lighten(@gray-light, 15%);
-@navbar-custom-link-hover-color: #FFF;
+@navbar-custom-link-hover-color: #000;
 @navbar-custom-link-hover-bg: transparent;
 @navbar-custom-link-active-color: @navbar-custom-link-hover-color;
 @navbar-custom-link-active-bg: @body-bg;
