--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,52 +1,18 @@
 body {
-  background: #111;
-  color: #FFF;
+  background: #111111;
+  color: #ffffff;
   font-size: 12px;
 }
 main {
-  margin-top: 84px;
-}
-.navbar-fixed-top {
-  border: 0;
-  box-shadow: 0 0 5px 5px #111;
-}
-.navbar-form-no-border {
-  border: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+  margin-top: 70px;
 }
 .tag-square {
   width: 20px;
   height: 20px;
 }
-.panel {
-  background: #333;
-}
-.panel .table > tbody:first-child > tr:first-child td,
-.panel .table > tbody:first-child > tr:first-child th {
-  border-top: 1px solid #dddddd;
-}
-.panel .table-bordered thead tr:first-child td,
-.panel .table-bordered tbody tr:first-child td,
-.panel .table-bordered tfoot tr:first-child td,
-.panel .table-bordered thead tr:first-child th,
-.panel .table-bordered tbody tr:first-child th,
-.panel .table-bordered tfoot tr:first-child th {
-  border-bottom: 1px solid #dddddd;
-}
-.panel .table-responsive > .table-bordered thead tr:first-child td,
-.panel .table-responsive > .table-bordered tbody tr:first-child td,
-.panel .table-responsive > .table-bordered tfoot tr:first-child td,
-.panel .table-responsive > .table-bordered thead tr:first-child th,
-.panel .table-responsive > .table-bordered tbody tr:first-child th,
-.panel .table-responsive > .table-bordered tfoot tr:first-child th {
-  border-bottom: 1px solid #dddddd;
-}
 option {
   background: #000;
-  color: #FFF;
+  color: #ffffff;
 }
 option[value=Common] {
   background: #1a1a1a;
@@ -188,7 +154,7 @@ option[value=Gold] {
 .inputBox.hasTypeIcon > .typeIcon .iconStars {
   position: absolute;
   bottom: 0;
-  color: #ff0;
+  color: #ffff00;
   line-height: 1;
   font-size: 9px;
   letter-spacing: -3px;
@@ -318,13 +284,13 @@ option[value=Gold] {
   background: #666600;
 }
 .inputBox[data-goal-type=Kill] > * {
-  border-color: #F00;
+  border-color: #ff0000;
 }
 .inputBox[data-goal-type=Stealth] > * {
-  border-color: #0F0;
+  border-color: #00ff00;
 }
 .inputBox[data-goal-type=Protect] > * {
-  border-color: #0FF;
+  border-color: #00ffff;
 }
 .inputBox .bs-yellow {
   background: #666600;
@@ -815,7 +781,7 @@ option[value=Gold] {
   padding: 5px;
   margin-top: 0;
   margin-bottom: 5px;
-  background: #222;
+  background: #222222;
 }
 .media .media-actions {
   opacity: .1;
@@ -886,7 +852,7 @@ option[value=Gold] {
   box-shadow: inset 0 0 5px 2px #00aaaa, 0 0 2px 1px #00aaaa;
 }
 .media.showModel {
-  box-shadow: inset 0 0 5px 2px transparent, 0 0 2px 1px transparent;
+  box-shadow: inset 0 0 5px 2px #222222, 0 0 2px 1px #222222;
 }
 .media.duplicateModel {
   box-shadow: inset 0 0 5px 2px #aa00aa, 0 0 2px 1px #aa00aa;
@@ -908,8 +874,8 @@ option[value=Gold] {
   padding: 5px;
 }
 .modal-content {
-  background: #111;
-  border: 1px solid #FFF;
+  background: #111111;
+  border: 1px solid #ffffff;
   border-radius: 0;
 }
 .btn {
@@ -919,6 +885,145 @@ option[value=Gold] {
 input[type="radio"],
 input[type="checkbox"] {
   margin: 0;
+}
+.navbar-fixed-top {
+  border: 0;
+  box-shadow: 0 0 10px 10px #111111;
+}
+.navbar-form-no-border {
+  border: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.navbar-custom {
+  background-color: #222222;
+  border-color: #080808;
+  border-bottom: 1px solid #ffffff;
+}
+.navbar-custom .nav-pills > li {
+  border: 1px solid #ffffff;
+  border-bottom-width: 0;
+}
+.navbar-custom .nav-pills > li.active {
+  border-bottom: 2px solid #111111;
+  margin-bottom: -2px;
+}
+.navbar-custom .nav-pills > li.fixed-width {
+  width: 135px;
+}
+.navbar-custom .nav-pills > li .filterAmount {
+  padding-right: 5px;
+}
+.navbar-custom .nav-pills > li .inputBox .inputBtn {
+  line-height: 18px;
+  padding: 0 2px;
+}
+.navbar-custom .nav-pills > li > a {
+  border-radius: 0;
+}
+.navbar-custom .nav-pills > li + li {
+  margin-left: -1px;
+}
+.navbar-custom .navbar-brand {
+  color: #9d9d9d;
+}
+.navbar-custom .navbar-brand:hover,
+.navbar-custom .navbar-brand:focus {
+  color: #ffffff;
+  background-color: transparent;
+}
+.navbar-custom .navbar-text {
+  color: #9d9d9d;
+}
+.navbar-custom .navbar-nav > li > a {
+  padding: 5px;
+  color: #9d9d9d;
+}
+.navbar-custom .navbar-nav > li > a:hover,
+.navbar-custom .navbar-nav > li > a:focus {
+  color: #ffffff;
+  background-color: transparent;
+}
+.navbar-custom .navbar-nav > .active > a,
+.navbar-custom .navbar-nav > .active > a:hover,
+.navbar-custom .navbar-nav > .active > a:focus {
+  color: #ffffff;
+  background-color: #111111;
+}
+.navbar-custom .navbar-nav > .disabled > a,
+.navbar-custom .navbar-nav > .disabled > a:hover,
+.navbar-custom .navbar-nav > .disabled > a:focus {
+  color: #444444;
+  background-color: transparent;
+}
+.navbar-custom .navbar-toggle {
+  border-color: #333333;
+}
+.navbar-custom .navbar-toggle:hover,
+.navbar-custom .navbar-toggle:focus {
+  background-color: #333333;
+}
+.navbar-custom .navbar-toggle .icon-bar {
+  background-color: #ffffff;
+}
+.navbar-custom .navbar-collapse,
+.navbar-custom .navbar-form {
+  border-color: #101010;
+}
+.navbar-custom .navbar-nav > .open > a,
+.navbar-custom .navbar-nav > .open > a:hover,
+.navbar-custom .navbar-nav > .open > a:focus {
+  background-color: #111111;
+  color: #ffffff;
+}
+@media (max-width: 767px) {
+  .navbar-custom .navbar-nav .open .dropdown-menu > .dropdown-header {
+    border-color: #080808;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu .divider {
+    background-color: #080808;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a {
+    color: #9d9d9d;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #ffffff;
+    background-color: transparent;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #ffffff;
+    background-color: #111111;
+  }
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-custom .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+    color: #444444;
+    background-color: transparent;
+  }
+}
+.navbar-custom .navbar-link {
+  color: #9d9d9d;
+}
+.navbar-custom .navbar-link:hover {
+  color: #ffffff;
+}
+.navbar-custom .btn-link {
+  color: #9d9d9d;
+}
+.navbar-custom .btn-link:hover,
+.navbar-custom .btn-link:focus {
+  color: #ffffff;
+}
+.navbar-custom .btn-link[disabled]:hover,
+fieldset[disabled] .navbar-custom .btn-link:hover,
+.navbar-custom .btn-link[disabled]:focus,
+fieldset[disabled] .navbar-custom .btn-link:focus {
+  color: #444444;
 }
 .np {
   padding: 0px !important;
