--- a/resources/cssLess/styles-light.less
+++ b/resources/cssLess/styles-light.less
@@ -1,12 +1,17 @@
 @import "_variables-light";
 @import "_mixins";
 
-//* { transition: background-color 1s, color 1s; }
-
 body {
 	background: @body-bg;
 	color: @body-color;
 	font-size: 12px;
+
+	&.switchingTheme {
+		* {
+			transition-property: background-color, color, border-color;
+			transition-duration: 1s;
+		}
+	}
 }
 
 main {
