--- a/resources/cssLess/_variables-light.less
+++ b/resources/cssLess/_variables-light.less
@@ -11,13 +11,13 @@
 @brand-warning: #F0AD4E;
 @brand-danger: #D9534F;
 @color-normal: #CCC;
-@color-purple: #909;
-@color-green: #090;
-@color-brown: #960;
-@color-blue: #069;
-@color-red: #900;
+@color-purple: #994D99;
+@color-green: #4D994D;
+@color-brown: #997E4D;
+@color-blue: #4D7F99;
+@color-red: #994D4D;
 @color-silver: #999;
-@color-gold: #990;
+@color-gold: #99994D;
 
 @color-stars: #FF0;
 @color-kill: #F00;
@@ -25,12 +25,12 @@
 @color-protect: #0FF;
 
 @color-media-default: #CCC;
-@color-media-new: #0A0;
-@color-media-clone: #0AA;
+@color-media-new: #53A653;
+@color-media-clone: #53A6A6;
 @color-media-show: @color-media-default;
-@color-media-duplicate: #A0A;
-@color-media-duplicate-found: #00A;
-@color-media-has-missing-data: #A00;
+@color-media-duplicate: #A653A6;
+@color-media-duplicate-found: #5454A8;
+@color-media-has-missing-data: #A85454;
 
 @inputBox-backcolor-default: #FFF;
 @inputBox-backcolor-header: @inputBox-backcolor-default;
