--- a/resources/cssLess/imports/_navbar-custom.less
+++ b/resources/cssLess/imports/_navbar-custom.less
@@ -12,6 +12,7 @@
 }
 
 .navbar-custom {
+	min-height: 0;
 	background-color: @navbar-custom-bg;
 	border-color: @navbar-custom-border;
 	border-bottom: 1px solid @body-color;
