--- a/resources/cssLess/styles-light.less
+++ b/resources/cssLess/styles-light.less
@@ -204,7 +204,7 @@ option {
 		border-color: lighten(@color, 40%);
 		color: lighten(@color, 40%);
 	}
-	.CommonDrop { background-color: #000; border-color: @inputBox-frontcolor-default; color: @inputBox-frontcolor-default; }
+	.CommonDrop { background-color: @body-color-inverted; border-color: @inputBox-frontcolor-default; color: @inputBox-frontcolor-default; }
 	.UncommonDrop { .dropRarityStyle(@color-blue); }
 	.RareDrop { .dropRarityStyle(@color-gold); }
 	.OreDrop { background-color: darken(@color-brown, 0); }
